--- a/emotional-truth-_-et/index.html
+++ b/emotional-truth-_-et/index.html
@@ -13,6 +13,16 @@
         font-family: 'Inter', sans-serif;
       }
     </style>
+<script type="importmap">
+{
+  "imports": {
+    "react/": "https://aistudiocdn.com/react@^19.1.1/",
+    "react": "https://aistudiocdn.com/react@^19.1.1",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "vite": "https://aistudiocdn.com/vite@^7.1.6",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.3"
+  }
+}
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
